commented out the eureka settings and added a generic global parm for all profiles

--- a/ConfigData/application.yml
+++ b/ConfigData/application.yml
@@ -1,9 +1,10 @@
 ---
 # Items that apply to ALL profiles:
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8010/eureka/
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8010/eureka/
+globalConfiguration: some-global-value
 
 ---
 spring:
